--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "- https://www.udemy.com/course/ts-for-js-developers/",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
